--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="utf-8">
     <title>Brent's New Web Site</title>
     <link rel="stylesheet" href="css/styles.css">  <!-- Our Style sheet in css -->
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
+
+    <div class="top_box">
+      <img src="images/cloud.png" alt="cloud-img">
+      <h1>Brent's Web Site</h1>
+      <h3>A Programmer</h3>
+      <img src="images/cloud.png" alt="cloud-img">
+      <img src="images/mountain.png" alt="mountain-img">
+    </div>
+
+    <div class="middle_box">
+
+
+    </div>
+
+    <div class="bottom_box">
+
+
+    </div>
 
   </body>
 </html>
