--- a/index.html
+++ b/index.html
@@ -1,30 +1,61 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Brent's New Web Site</title>
-    <link rel="stylesheet" href="css/styles.css">  <!-- Our Style sheet in css -->
-    <link rel="icon" href="favicon.ico">
-  </head>
-  <body>
 
-    <div class="top_box">
-      <img src="images/cloud.png" alt="cloud-img">
-      <h1>Brent's Web Site</h1>
-      <h3>A Programmer</h3>
-      <img src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
+<head>
+  <meta charset="utf-8">
+  <title>Brent's New Web Site</title>
+  <link rel="stylesheet" href="css/styles.css"> <!-- Our Style sheet in css -->
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Montserrat:ital@1&family=Open+Sans&family=Red+Rose&display=swap" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <div class="top_box">
+    <img class="top_cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>Brent's Web Site</h1>
+    <h3>A Programmer</h3>
+    <img class="bottom_cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
+
+  <div class="middle-container">
+    <div class="profile">
+      <img src="" alt="">
+      <h2>Hello.</h2>
+      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
     </div>
-
-    <div class="middle_box">
-
-
+    <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="" src="" alt="">
+        <h3>Lorem & Ipsum</h3>
+        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+      </div>
+      <div class="skill-row">
+        <img class="" src="" alt="">
+        <h3>Lorem Ipsum Dolor</h3>
+        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+      </div>
     </div>
-
-    <div class="bottom_box">
-
-
+    <hr>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
     </div>
+  </div>
+  
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://twitter.com/">Twitter</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p>© 2018 Name Surname.</p>
+  </div>
 
-  </body>
+</body>
+
 </html>
