--- a/index.html
+++ b/index.html
@@ -15,29 +15,34 @@
   <div class="top_box">
     <img class="top_cloud" src="images/cloud.png" alt="cloud-img">
     <h1>Brent's Web Site</h1>
-    <h3>A Programmer</h3>
+    <h2>A <span><u>Pro</u></span>grammer</h2>
     <img class="bottom_cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="images/mountain.png" alt="mountain-img">
+    <img src="images/mountain4.png" alt="mountain-img">
   </div>
 
-  <div class="middle-container">
+  <div class="middle_box">
     <div class="profile">
-      <img src="" alt="">
-      <h2>Hello.</h2>
-      <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <img src="images/Brent2.png" alt="brent-img" style="width:300px;height:300px;padding-top: 50px;">
+      <h2>Professional Summary</h2>
+      <p>Dynamic and motivated professional with over 15 years of management experience.</p>
+      <p>Skilled in managing projects from concept to completion. Well-known for creating positive environments where employees can succeed. </p>
+      <p>  Effective leader who quickly masters new roles and technologies to achieve positive results. </p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="" src="" alt="">
-        <h3>Lorem & Ipsum</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <img img class="productivity" src="images/productivity.png" alt="productivity-img">
+        <h3>Project Managment</h3>
+        <p>I have successfully managed numerious complex electronic hardware and software projects</p>
+        <p>I have been involved in all aspects of product development from the concept phase, into production, to end of life planning. </p>
+        <p>Many of the products I have worked on ae used on live concerts and theatrical productions around the world. I know I can help you with your project!</p>
       </div>
       <div class="skill-row">
-        <img class="" src="" alt="">
-        <h3>Lorem Ipsum Dolor</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <img class="processor" src="images/processor.png" alt="processor.img">
+        <h3>Desgin & Development</h3>
+        <p>I started learing to code and build electronic project in my teans.</p>
+        <p>Over my career I have extensive epxerience developing </p>
       </div>
     </div>
     <hr>
@@ -48,14 +53,14 @@
       <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
     </div>
   </div>
-  
-  <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-    <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p>© 2018 Name Surname.</p>
-  </div>
 
+  <div class="bottom_box">
+    <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p>© 2020 Brenton M Hoffman.</p>
+    <a href="https://www.freepik.com/free-photos-vectors/design">Design vector created by freepik - www.freepik.com</a>
+<div>Icons made by <a href="http://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+  </div>
 </body>
 
 </html>
